QStyleSheetStyle: Fix styling CE_ItemViewItem

Fix CE_ItemViewItem styling when only the indicator is styled. The base
style needs to use the correct pixelMetric() from the QStyleSheetStyle.
This is done by temporarily setting QStyleSheetStyle as the proxy of the
base style.

Fixes: QTBUG-129290
Change-Id: I28297ab3128e9ac525d50ad5f9d00812375a5c95
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>